// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GridBlock /> renders blocks GridBlock component: blocks 1`] = `
<div
  className="as-t-grid-block as-t-grid-block--blocks"
>
  <div
    className="as-t-grid-block__inner"
  >
    <div
      className="as-t-grid-block__item"
      key="0"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
    <div
      className="as-t-grid-block__item"
      key="1"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`<GridBlock /> renders column + rows GridBlock component: column + rows 1`] = `
<div
  className="as-t-grid-block as-t-grid-block--col-rows"
>
  <div
    className="as-t-grid-block__inner"
  >
    <div
      className="as-t-grid-block__item"
      key="0"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
    <div
      className="as-t-grid-block__item"
      key="1"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
    <div
      className="as-t-grid-block__item"
      key="2"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`<GridBlock /> renders column GridBlock component: column 1`] = `
<div
  className="as-t-grid-block as-t-grid-block--col"
>
  <div
    className="as-t-grid-block__inner"
  >
    <div
      className="as-t-grid-block__item"
      key="0"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`<GridBlock /> renders columns + row GridBlock component: columns + row 1`] = `
<div
  className="as-t-grid-block as-t-grid-block--cols-row"
>
  <div
    className="as-t-grid-block__inner"
  >
    <div
      className="as-t-grid-block__item"
      key="0"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
    <div
      className="as-t-grid-block__item"
      key="1"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
    <div
      className="as-t-grid-block__item"
      key="2"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`<GridBlock /> renders columns GridBlock component: columns 1`] = `
<div
  className="as-t-grid-block as-t-grid-block--cols"
>
  <div
    className="as-t-grid-block__inner"
  >
    <div
      className="as-t-grid-block__item"
      key="0"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
    <div
      className="as-t-grid-block__item"
      key="1"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`<GridBlock /> renders default GridBlock component: default 1`] = `
<div
  className="as-t-grid-block"
>
  <div
    className="as-t-grid-block__inner"
  >
    <div
      className="as-t-grid-block__item"
      key="0"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`<GridBlock /> renders row + columns GridBlock component: row + columns 1`] = `
<div
  className="as-t-grid-block as-t-grid-block--row-cols"
>
  <div
    className="as-t-grid-block__inner"
  >
    <div
      className="as-t-grid-block__item"
      key="0"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
    <div
      className="as-t-grid-block__item"
      key="1"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
    <div
      className="as-t-grid-block__item"
      key="2"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`<GridBlock /> renders row GridBlock component: row 1`] = `
<div
  className="as-t-grid-block as-t-grid-block--row"
>
  <div
    className="as-t-grid-block__inner"
  >
    <div
      className="as-t-grid-block__item"
      key="0"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`<GridBlock /> renders rows + column GridBlock component: rows + column 1`] = `
<div
  className="as-t-grid-block as-t-grid-block--rows-col"
>
  <div
    className="as-t-grid-block__inner"
  >
    <div
      className="as-t-grid-block__item"
      key="0"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
    <div
      className="as-t-grid-block__item"
      key="1"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
    <div
      className="as-t-grid-block__item"
      key="2"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`<GridBlock /> renders rows GridBlock component: rows 1`] = `
<div
  className="as-t-grid-block as-t-grid-block--rows"
>
  <div
    className="as-t-grid-block__inner"
  >
    <div
      className="as-t-grid-block__item"
      key="0"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
    <div
      className="as-t-grid-block__item"
      key="1"
    >
      <div
        className="as-t-grid-block__item-content-placeholder"
      />
    </div>
  </div>
</div>
`;
